<resources>
    <string name="app_name">Project301</string>
    <string name="type_your_name">Type your name</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="button">Button</string>
    <string name="provider">Provider</string>
    <string name="consumer">Consumer</string>
    <string name="type_your_name">Type your name</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="type_your_phone">Type your phone</string>
    <string name="check_validation">Check Validation</string>
    <string name="available_task_list">Available Task List</string>
    <string name="available_task_list">Available Task List</string>
    <string name="search">Search</string>
    <string name="view_on_map">View On Map</string>
    <string name="type_the_search_key_word">Type the search key word</string>
    <string name="bid_history">Bid History</string>
    <string name="task_detail">task detail</string>
    <string name="bid_list">Bid List</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="bid">Bid</string>
    <string name="my_bid">My Bid</string>
    <string name="type_my_bid">type my bid</string>
    <string name="lowest_bid">Lowest Bid</string>
    <string name="postal_address">postal address</string>
    <string name="yyyy_mm_dd_hh_mm_ss">yyyy-mm-dd,hh:mm:ss</string>
    <string name="time">Time</string>
    <string name="detail">Detail</string>
    <string name="destination">Destination</string>
    <string name="the_lowest_bid">the lowest bid</string>
    <string name="post_new_task">Post New Task</string>
    <string name="view_and_edit">View And Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bid_list">Bid List</string>
</resources>
