<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/provider_task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_task_list"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ListView
            android:id="@+id/provider_list"
            android:layout_width="match_parent"
            android:layout_height="331dp">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/type_the_search_key_word"
                android:inputType="text" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/provider_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_on_map" />

            <Button
                android:id="@+id/provider_bid_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bid_history" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>